--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,7 @@ theme:
     - navigation.tabs
     - navigation.sections
     - navigation.top
-    # - toc.integrate
+    - toc.integrate
     - search.suggest
     - search.highlight
     - content.tabs.link
